# dymopy

./: README.md  pyproject.toml  setup.cfg
dymopy/: __init__.py  client.py
examples/: connect.py  input.py  main.py
tests/: test_connection.py  test_dymopy.py
