[metadata]
name = dymopy
version = 0.0.1
author = Bill Ash 
author_email = bill@overco.net
description = API wrapper for DYMO Web Services. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bill-ash/dymopy
project_urls =
    Bug Tracker = https://github.com/bill-ash/dymopy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = dymopy
packages = find:
python_requires = >=3.6

[options.packages.find]
where = dymopy